RHAIENG-2042, RHAIENG-2111: chore(trustyai): make the dnf cache changes to avoid running out of disk space (#1732)
* https://github.com/opendatahub-io/notebooks/pull/2697#discussion_r2546413214

```
[7/7] STEP 15/15: LABEL "architecture"="aarch64" "vcs-type"="git" "vcs-ref"="2810b3b8179aa064eb92cced6b4c54d3879a3d9a" "org.opencontainers.image.revision"="2810b3b8179aa064eb92cced6b4c54d3879a3d9a" "quay.expires-after"="5d" "build-date"="2025-11-25T18:44:58Z" "version"="on-pr-2810b3b8179aa064eb92cced6b4c54d3879a3d9a" "io.openshift.tags"="odh-workbench-jupyter-trustyai-cpu-py312" "url"="https://github.com/jiridanek/notebooks" "release"="1764096054" "git.url"="https://github.com/jiridanek/notebooks" "git.commit"="2810b3b8179aa064eb92cced6b4c54d3879a3d9a"
  [7/7] COMMIT quay.io/rhoai/pull-request-pipelines:notebooks-2810b3b8179aa064eb92cced6b4c54d3879a3d9a-linux-m2xlarge-arm64
  time="2025-11-25T19:49:33Z" level=error msg="While recovering from a failure (applying layer diff), error deleting layer \"f79b5b22e93648e277de7a1a6b8a06c30ef828cfc902b0f40f066f40a2b81a85\": creating root temp directory /var/lib/containers/storage/overlay-layers/tmp failed: mkdir /var/lib/containers/storage/overlay-layers/tmp: no space left on device"
  Error: committing container for step {Env:[MINIMAL_SOURCE_CODE=jupyter/minimal/ubi9-python-3.12 DATASCIENCE_SOURCE_CODE=jupyter/datascience/ubi9-python-3.12 TRUSTYAI_SOURCE_CODE=jupyter/trustyai/ubi9-python-3.12 JUPYTER_REUSABLE_UTILS=jupyter/utils container=oci PYTHON=python3.12 MPI_HOME=/usr/lib64/openmpi APP_ROOT=/opt/app-root HOME=/opt/app-root/src VIRTUAL_ENV=/opt/app-root PIP_NO_CACHE_DIR=off UV_NO_CACHE=true PIP_DISABLE_PIP_VERSION_CHECK=1 PYTHONUNBUFFERED=1 PYTHONIOENCODING=utf-8 LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8 PS1=(app-root) \w$  CNB_USER_ID=1001 CNB_GROUP_ID=0 PIP_CONFIG_FILE=/opt/app-root/pip.conf UV_CONFIG_FILE=/opt/app-root/uv.toml LD_PRELOAD=/usr/lib64/libjemalloc.so.2 PATH=/usr/local/texlive/bin/linux:/usr/local/pandoc/bin:/opt/app

--- a/jupyter/trustyai/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/trustyai/ubi9-python-3.12/Dockerfile.cpu
@@ -192,7 +192,7 @@ USER 0
 
 # Install jre that is needed to run the trustyai library
 # Also install runtime libraries for s390x/ppc64le
-RUN /bin/bash <<'EOF'
+RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked,id=notebooks-dnf /bin/bash <<'EOF'
 set -Eeuxo pipefail
 INSTALL_PKGS="java-17-openjdk"
 ARCH=$(uname -m)
