--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/pyproject.toml
@@ -59,7 +59,8 @@ dependencies = [
 
 override-dependencies = [
     # tf2onnx has pinned protobuf version, that causes conflict with other packages
-    "protobuf==6.31.1"
+    "protobuf==6.31.1",
+    "keras~=3.12.0"
 ]
 
 constraint-dependencies = [
