--- a/.tekton/odh-workbench-jupyter-trustyai-cpu-py312-pull-request.yaml
+++ b/.tekton/odh-workbench-jupyter-trustyai-cpu-py312-pull-request.yaml
@@ -45,6 +45,7 @@ spec:
     value:
     - linux-extra-fast/amd64
     - linux-m2xlarge/arm64
+    - linux/ppc64le
     - linux/s390x
   - name: image-expires-after
     value: 5d
