--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.cpu
@@ -11,6 +11,10 @@ FROM registry.access.redhat.com/ubi9/ubi AS ubi-repos
 ####################
 FROM ${BASE_IMAGE} AS cpu-base
 
+# RHAIENG-2189: this is AIPCC migration phase 1.5
+ENV PIP_EXTRA_INDEX_URL=https://pypi.org/simple
+ENV UV_EXTRA_INDEX_URL=https://pypi.org/simple
+
 WORKDIR /opt/app-root/bin
 
 # OS Packages needs to be installed as root
