--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -10,6 +10,10 @@ FROM ${BASE_IMAGE} AS cpu-base
 
 ARG TARGETARCH
 
+# RHAIENG-2189: this is AIPCC migration phase 1.5
+ENV PIP_EXTRA_INDEX_URL=https://pypi.org/simple
+ENV UV_EXTRA_INDEX_URL=https://pypi.org/simple
+
 WORKDIR /opt/app-root/bin
 
 # OS Packages needs to be installed as root
