--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -294,7 +294,8 @@ if [ "$TARGETARCH" = "ppc64le" ]; then
     export ARROW_HOME
     LD_LIBRARY_PATH=$(pwd)/dist/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
     export LD_LIBRARY_PATH
-    export CMAKE_PREFIX_PATH=$ARROW_HOME:$CMAKE_PREFIX_PATH
+    CMAKE_PREFIX_PATH=$ARROW_HOME${CMAKE_PREFIX_PATH:+:$CMAKE_PREFIX_PATH}
+    export CMAKE_PREFIX_PATH
     export PARQUET_TEST_DATA="${PWD}/cpp/submodules/parquet-testing/data"
     export ARROW_TEST_DATA="${PWD}/testing/data"
     cmake -S cpp -B cpp/build \
