--- a/runtimes/minimal/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/minimal/ubi9-python-3.12/Dockerfile.cpu
@@ -8,6 +8,10 @@ ARG BASE_IMAGE
 ####################
 FROM ${BASE_IMAGE} AS cpu-base
 
+# RHAIENG-2189: this is AIPCC migration phase 1.5
+ENV PIP_EXTRA_INDEX_URL=https://pypi.org/simple
+ENV UV_EXTRA_INDEX_URL=https://pypi.org/simple
+
 WORKDIR /opt/app-root/bin
 
 # OS Packages needs to be installed as root
