RHAIENG-2189: build(datascience): add missing -devel libraries for s390x (already added for ppc64le before)
```
        The headers or library files could not be found for zlib,
        a required dependency when compiling Pillow from source.

        Please see the install instructions at:

        https://pillow.readthedocs.io/en/latest/installation/basic-installation.html
```

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -378,7 +378,7 @@ EOF
 
 RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked,id=notebooks-dnf /bin/bash <<'EOF'
 set -Eeuxo pipefail
-if [ "${TARGETARCH}" = "ppc64le" ]; then
+if [ "${TARGETARCH}" = "ppc64le" ] || [ "$TARGETARCH" = "s390x" ]; then
   packages=(
     # required to compile pillow
     zlib-devel libjpeg-turbo-devel
