RHAIENG-2189: build(codeserver): add back pypi index
```
+ uv pip install /wheelsdir/pillow-11.3.0-cp312-cp312-manylinux_2_34_ppc64le.whl /wheelsdir/pyarrow-17.0.0-cp312-cp312-linux_ppc64le.whl
Using Python 3.12.9 environment at: /opt/app-root
  × No solution found when resolving dependencies:
  ╰─▶ Because only numpy==2.3.4 is available and numpy==2.3.4 has no wheels
      with a matching platform tag (e.g., `manylinux_2_34_ppc64le`), we can
      conclude that numpy==2.3.4 cannot be used.
      And because pyarrow==17.0.0 depends on numpy==2.3.4, we can conclude
      that pyarrow==17.0.0 cannot be used.
      And because only pyarrow==17.0.0 is available and you require pyarrow,
      we can conclude that your requirements are unsatisfiable.
      hint: Wheels are available for `numpy` (v2.3.4) on the following
      platforms: `linux_aarch64`, `linux_x86_64`
subprocess exited with status 1
```

--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -72,6 +72,10 @@ FROM ${BASE_IMAGE} AS cpu-base
 
 WORKDIR /opt/app-root/bin
 
+# RHAIENG-2189: this is AIPCC migration phase 1.5
+ENV PIP_EXTRA_INDEX_URL=https://pypi.org/simple
+ENV UV_EXTRA_INDEX_URL=https://pypi.org/simple
+
 # OS Packages needs to be installed as root
 USER 0
 
