RHAIENG-2415: chore(python): write a doctest test and enable doctest tests execution in pytest (#2760)

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,15 @@
 # https://docs.pytest.org/en/7.1.x/reference/reference.html#configuration-options
 
 [pytest]
-addopts = --strict-markers --capture=no --tb=short
+# https://docs.pytest.org/en/stable/how-to/doctest.html
+# https://docs.pytest.org/en/stable/example/pythoncollection.html#ignore-paths-during-test-collection
+addopts =
+    --strict-markers --capture=no --tb=short
+    --ignore=ci --ignore=codeserver --ignore=jupyter --ignore=rstudio
+    --doctest-modules
+
+# https://docs.pytest.org/en/stable/example/pythoncollection.html#changing-directory-recursion
+norecursedirs = .git
 
 # pytest-subtest plugin is built-in since pytest 9.0: https://docs.pytest.org/en/stable/how-to/subtests.html
 required_plugins =
