--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.cpu
@@ -11,9 +11,13 @@ FROM registry.access.redhat.com/ubi9/ubi AS ubi-repos
 ####################
 FROM ${BASE_IMAGE} AS cpu-base
 
-# RHAIENG-2189: this is AIPCC migration phase 1.5
+### BEGIN RHAIENG-2189: this is AIPCC migration phase 1.5
 ENV PIP_EXTRA_INDEX_URL=https://pypi.org/simple
+# UV_EXTRA_INDEX_URL is deprecated in favor of UV_INDEX
 ENV UV_EXTRA_INDEX_URL=https://pypi.org/simple
+# https://docs.astral.sh/uv/reference/environment/#uv_index
+ENV UV_INDEX=https://pypi.org/simple
+### END RHAIENG-2189: this is AIPCC migration phase 1.5
 
 WORKDIR /opt/app-root/bin
 
