--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -10,9 +10,13 @@ FROM ${BASE_IMAGE} AS cpu-base
 
 ARG TARGETARCH
 
-# RHAIENG-2189: this is AIPCC migration phase 1.5
+### BEGIN RHAIENG-2189: this is AIPCC migration phase 1.5
 ENV PIP_EXTRA_INDEX_URL=https://pypi.org/simple
+# UV_EXTRA_INDEX_URL is deprecated in favor of UV_INDEX
 ENV UV_EXTRA_INDEX_URL=https://pypi.org/simple
+# https://docs.astral.sh/uv/reference/environment/#uv_index
+ENV UV_INDEX=https://pypi.org/simple
+### END RHAIENG-2189: this is AIPCC migration phase 1.5
 
 WORKDIR /opt/app-root/bin
 
