NO-JIRA: install ruyamel because we import it (#2764)
```
________ ERROR collecting scripts/generate_pull_request_pipelineruns.py ________
ImportError while importing test module '/home/runner/work/notebooks/notebooks/scripts/generate_pull_request_pipelineruns.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
../../../.local/share/uv/python/cpython-3.14.2-linux-x86_64-gnu/lib/python3.14/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
scripts/generate_pull_request_pipelineruns.py:12: in <module>
    from ruamel.yaml import YAML
E   ModuleNotFoundError: No module named 'ruamel'
```

https://github.com/opendatahub-io/notebooks/actions/runs/20073940406/job/57583254553?pr=2760

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,9 @@ dev = [
     "pyfakefs",
     "pydantic",
     "requests",
+
     "pyyaml",
+    "ruamel-yaml",
 
     "testcontainers",
     "docker",
