NO-JIRA: add go caching to avoid 30s wasted downloading and compiling go helper (#2764)

--- a/.github/workflows/build-notebooks-push.yaml
+++ b/.github/workflows/build-notebooks-push.yaml
@@ -31,6 +31,10 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
+      - uses: actions/setup-go@v5
+        with:
+          cache-dependency-path: "**/*.sum"
+
       - name: Determine targets to build (we want to build everything on push)
         run: |
           set -x
