--- a/.github/workflows/build-notebooks-pr-rhel.yaml
+++ b/.github/workflows/build-notebooks-pr-rhel.yaml
@@ -55,6 +55,10 @@ jobs:
       - uses: actions/checkout@v5
         if: ${{ github.event_name != 'pull_request_target' }}
 
+      - uses: actions/setup-go@v5
+        with:
+          cache-dependency-path: "**/*.sum"
+
       - name: Determine targets to build based on changed files
         if: ${{ github.event_name == 'pull_request_target' }}
         run: |
