--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -14,9 +14,14 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
-      - uses: actions/setup-python@v5
+      # https://github.com/astral-sh/setup-uv
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v7
         with:
-          python-version-file: '.python-version'
+          version: "latest"
+          python-version: "3.14"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Rerun all code generators we have
         run: bash ci/generate_code.sh
@@ -40,13 +45,12 @@ jobs:
 
       # https://github.com/astral-sh/setup-uv
       - name: Install the latest version of uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v7
         with:
           version: "latest"
           python-version: "3.14"
           enable-cache: true
           cache-dependency-glob: "uv.lock"
-          pyproject-file: "pyproject.toml"
 
       - name: Check uv is installed correctly
         run: uv version
