RHAIENG-2189: configure `PIP_INDEX_URL` because we've changed our mind (#2760)
This was decided on backlog refinement meeting, decision is captured in a note on jira
https://issues.redhat.com/browse/RHAIENG-2189?focusedId=28640380&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-28640380

--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -73,11 +73,11 @@ FROM ${BASE_IMAGE} AS cpu-base
 WORKDIR /opt/app-root/bin
 
 ### BEGIN RHAIENG-2189: this is AIPCC migration phase 1.5
-ENV PIP_EXTRA_INDEX_URL=https://pypi.org/simple
-# UV_EXTRA_INDEX_URL is deprecated in favor of UV_INDEX
-ENV UV_EXTRA_INDEX_URL=https://pypi.org/simple
-# https://docs.astral.sh/uv/reference/environment/#uv_index
-ENV UV_INDEX=https://pypi.org/simple
+ENV PIP_INDEX_URL=https://pypi.org/simple
+# UV_INDEX_URL is deprecated in favor of UV_DEFAULT_INDEX
+ENV UV_INDEX_URL=https://pypi.org/simple
+# https://docs.astral.sh/uv/reference/environment/#uv_default_index
+ENV UV_DEFAULT_INDEX=https://pypi.org/simple
 ### END RHAIENG-2189: this is AIPCC migration phase 1.5
 
 # OS Packages needs to be installed as root
