--- a/runtimes/tensorflow/ubi9-python-3.12/Dockerfile.cuda
+++ b/runtimes/tensorflow/ubi9-python-3.12/Dockerfile.cuda
@@ -69,11 +69,11 @@ ARG JUPYTER_REUSABLE_UTILS=jupyter/utils
 ARG TENSORFLOW_SOURCE_CODE=runtimes/tensorflow/ubi9-python-3.12
 
 ### BEGIN RHAIENG-2189: this is AIPCC migration phase 1.5
-ENV PIP_EXTRA_INDEX_URL=https://pypi.org/simple
-# UV_EXTRA_INDEX_URL is deprecated in favor of UV_INDEX
-ENV UV_EXTRA_INDEX_URL=https://pypi.org/simple
-# https://docs.astral.sh/uv/reference/environment/#uv_index
-ENV UV_INDEX=https://pypi.org/simple
+ENV PIP_INDEX_URL=https://pypi.org/simple
+# UV_INDEX_URL is deprecated in favor of UV_DEFAULT_INDEX
+ENV UV_INDEX_URL=https://pypi.org/simple
+# https://docs.astral.sh/uv/reference/environment/#uv_default_index
+ENV UV_DEFAULT_INDEX=https://pypi.org/simple
 ### END RHAIENG-2189: this is AIPCC migration phase 1.5
 
 LABEL name="odh-notebook-cuda-runtime-tensorflow-ubi9-python-3.12" \
