RHAIENG-2101: install libxcrypt-compat to get rid of lld inconsistencies (#2760)
There is a Jira from the past about this

* https://issues.redhat.com/browse/RHOAIENG-28824
* https://issues.redhat.com/browse/RHAIENG-1284

```
SUBFAILED[dlib='/opt/app-root/lib64/python3.12/site-packages/mysql/vendor/private/sasl2/libplain.so.3.0.0'] tests/containers/base_image_test.py::TestBaseImage::test_elf_files_can_link_runtime_libs[ghcr.io/opendatahub-io/notebooks/workbench-images:rocm-jupyter-tensorflow-ubi9-python-3.12-_8ac1b04d1f22ec3c5bc4a50a95176a522bee132d] - Failed: dlib='/opt/app-root/lib64/python3.12/site-packages/mysql/vendor/private/sasl2/libplain.so.3.0.0' has unsatisfied dependencies deps='libcrypt.so.1 => not found'
```

--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/Dockerfile.rocm
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/Dockerfile.rocm
@@ -123,7 +123,7 @@ USER root
 # Install useful OS packages
 RUN --mount=type=cache,target=/var/cache/dnf,sharing=locked,id=notebooks-dnf /bin/bash <<'EOF'
 set -Eeuxo pipefail
-dnf install -y --setopt=keepcache=1 jq unixODBC postgresql git-lfs libsndfile
+dnf install -y --setopt=keepcache=1 jq unixODBC postgresql git-lfs libsndfile libxcrypt-compat
 EOF
 
 # Copy dynamically-linked mongocli built in earlier build stage
