RHAIENG-2101: set `--env=CFLAGS=-Dundefined=64` on github actions emulated s390x to avoid pyzmq compilation failure (#2760)
```
/dev/mapper/buildvg-buildlv   68G   14G   52G  21% /home/runner/.local/share/containers
  × Failed to build `pyzmq==27.1.0`
  ├─▶ The build backend returned an error
  ╰─▶ Call to `scikit_build_core.build.build_wheel` failed (exit status: 1)
...
      /tmp/tmpy8t962b7/build/_deps/bundled_libzmq-build/platform.hpp:22:28:
      error: ‘undefined’ was not declared in this scope
         22 | #define ZMQ_CACHELINE_SIZE undefined
            |                            ^~~~~~~~~
```

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -281,7 +281,8 @@ jobs:
           if [[ "${{ inputs.platform }}" == "linux/s390x" ]]; then
             # workaround for known issue https://github.com/zeromq/libzmq/pull/4486
             # In qemu-user, CACHELINE_SIZE probe is undefined
-            EXTRA_PODMAN_BUILD_ARGS+='--env=CXXFLAGS=-Dundefined=64'
+            # Compiling pyzmq through UV needs this in CFLAGS
+            EXTRA_PODMAN_BUILD_ARGS+='--env=CFLAGS=-Dundefined=64 --env=CXXFLAGS=-Dundefined=64 --unsetenv=CFLAGS --unsetenv=CXXFLAGS'
           fi
           echo "EXTRA_PODMAN_BUILD_ARGS=$EXTRA_PODMAN_BUILD_ARGS" >> $GITHUB_OUTPUT
 
