Revert "RHAIENG-2042: chore(Dockerfile.*): enable DNF cache mount for improved build efficiency in all Dockerfiles (#2697)"
We're not ready.

This reverts commit 4e6f48fd

--- a/base-images/cpu/c9s-python-3.12/Dockerfile.cpu
+++ b/base-images/cpu/c9s-python-3.12/Dockerfile.cpu
@@ -60,7 +60,7 @@ COPY --from=buildscripts /mnt/usr/bin/ /usr/bin/
 
 RUN \
 --mount=from=buildscripts,source=/mnt,target=/mnt \
---mount=type=cache,sharing=locked,id=notebooks-dnf,target=/var/cache/dnf \
+--mount=type=cache,sharing=locked,id=dnf-c9s,target=/var/cache/dnf \
 /bin/bash <<'EOF'
 set -Eeuxo pipefail
 /mnt/aipcc.sh
