--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -78,7 +78,7 @@ else
     PACKAGES="perl mesa-libGL skopeo"
 fi
 echo "Installing: $PACKAGES"
-dnf install -y --allowerasing $PACKAGES
+dnf install -y $PACKAGES
 dnf clean all
 rm -rf /var/cache/yum
 EOF
