--- a/jupyter/pytorch+llmcompressor/ubi9-python-3.12/Dockerfile.konflux.cuda
+++ b/jupyter/pytorch+llmcompressor/ubi9-python-3.12/Dockerfile.konflux.cuda
@@ -124,7 +124,7 @@ USER root
 # Install useful OS packages
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
-dnf install -y jq unixODBC postgresql git-lfs libsndfile
+dnf install -y --setopt=keepcache=0 jq unixODBC postgresql git-lfs libsndfile libxcrypt-compat
 dnf clean all
 rm -rf /var/cache/yum
 EOF
